# SilkCasket

./: .gitattributes  .gitgnore  CMakeLists.txt  README-ru.md  README.md  SilkCasket.hpp
android/SilkCasket/: settings.gradle.kts
android/SilkCasket/app/: build.gradle.kts
android/SilkCasket/app/src/main/: AndroidManifest.xml
android/SilkCasket/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/SilkCasket/app/src/main/cpp/include/silkcasket/: encryption.hpp  log.hpp
android/SilkCasket/app/src/main/cpp/include/silkcasket/compress/: compress.hpp  mode.hpp
android/SilkCasket/app/src/main/cpp/include/silkcasket/parser/: entry.hpp  header.hpp
android/SilkCasket/app/src/main/cpp/include/silkcasket/structure/: address.hpp  entry.hpp  header.hpp  verification.hpp
android/SilkCasket/app/src/main/cpp/src/compress/: compress.cpp  lzw.cpp
android/SilkCasket/app/src/main/cpp/src/structure/: entry.cpp  header.cpp  verification.cpp
android/SilkCasket/app/src/main/res/layout/: activity_main.xml
android/SilkCasket/app/src/main/res/values-night/: themes.xml
android/SilkCasket/gradle/: libs.versions.toml
android/SilkCasket/gradle/wrapper/: gradle-wrapper.properties
include/SilkCasket/: compress.hpp  encryption.hpp  structure.hpp
include/silkcasket/: encryption.hpp
include/silkcasket/compress/: compress.hpp  lizard.hpp  lz4.hpp  lzma2-fast.hpp
include/silkcasket/structure/: address.hpp  entry.hpp
src/: analysis.cpp  build.cpp  compress.cpp  encryption.cpp  structure.cpp
src/compress/: compress.cpp  lizard.cpp  lz4.cpp  lzma2-fast.cpp  lzw.cpp
(+5 files in other folders)
